# ssl-cookbook

./: .gitignore  LICENSE  README.md  pyproject.toml
ssl_cookbook/contrastive_learning/: README.md  simple_example.ipynb
