# >>> Poetry Configuration START
[tool.poetry]
name = "ssl-cookbook"
version = "0.1.0"
description = "An educational cookbook of SSL (self-supervised learning) paradigms."
authors = ["Adnan Siddiquei"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
pytorch-lightning = "^2.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
# <<< Poetry Configuration END

# >>> Ruff Configuration START
[tool.ruff]
# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`), a subset of the pycodestyle (`E`) codes, pycodestyle warnings (`W`).
# This will mimic the default flake8 configuration for linting.
select = ["E4", "E7", "E9", "F", "W"]
ignore = ["E741"]

[tool.ruff.lint.extend-per-file-ignores]
# Ignore unused-imports in __init__.py files.
"**/__init__.py" = ["F401"]
"report/figures/*" = ["ALL"]

[tool.ruff.format]
# Override the default setting, which is "double".
quote-style = "single"
# <<< Ruff Configuration END